# SerializationFixture

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.cpp
.github/workflows/: Linux.yml  Windows.yml  macOS.yml
Serialization/: Access.hpp  Core.hpp  Hash.hpp  ReadArchive.hpp  Registry.hpp  Scope.hpp  UndefMacro.hpp  WriteArchive.hpp
Serialization/Detail/: MacroUnscope.hpp  Meta.hpp  Pointer.hpp  StaticString.hpp  Tools.hpp  TypeDetection.hpp
Serialization/Support/: array.hpp  string.hpp  vector.hpp
cmake/: SerializationFixtureConfig.cmake
include/: SerializationFixture.hpp
include/Auto/: TestingCore.cpp  TestingCore.hpp
include/AutoTesting/: Core.cpp  Core.hpp
include/Eightser/: Aggregate.hpp  ApplyFunctor.hpp  Binary.hpp  Common.hpp  Compress.hpp  Core.hpp  DataTrack.hpp  HierarchyTrack.hpp  IArchive.hpp  OArchive.hpp  Serializable.hpp  StreamWrapper.hpp  Union.hpp
include/Eightser/BuiltIn/: any.hpp  array.hpp  atomic.hpp  bitset.hpp  complex.hpp  deque.hpp  forward_list.hpp  list.hpp  map.hpp  optional.hpp  pair.hpp  priority_queue.hpp  queue.hpp  set.hpp  shared_ptr.hpp  stack.hpp  string.hpp  tuple.hpp  unique_ptr.hpp  valarray.hpp  variant.hpp  vector.hpp  weak_ptr.hpp
include/Eightser/Core/: ArchiveBase.hpp  ArchiveTraits.hpp  Config.hpp  Hash.hpp  Memory.hpp  PolymorphicArchive.hpp  Serialization.hpp
include/Eightser/Detail/: MacroUndef.hpp  Meta.hpp  MetaMacro.hpp  Preprocessor.hpp
include/Eightser/Dynamic/: AnyRegistry.hpp  Instantiable.hpp  InstantiableRegistry.hpp  InstantiableTraits.hpp
include/Eightser/Utility/: Alias.hpp  BitPack.hpp  Functional.hpp  Span.hpp
include/SF/: Aggregate.hpp  Alias.hpp  ApplyFunctor.hpp  Binary.hpp  Common.hpp  Compress.hpp  Core.hpp  DataTrack.hpp  DataTrackBase.hpp  ExternSerialization.hpp  Hierarchy.hpp  HierarchyTrack.hpp  IArchive.hpp  NativeSaveLoad.hpp  OArchive.hpp  ReadArchive.hpp  Serializable.hpp  StreamWrapper.hpp  Strict.hpp  Union.hpp  WriteArchive.hpp
include/SF/BuiltIn/: any.hpp  array.hpp  atomic.hpp  bitset.hpp  complex.hpp  deque.hpp  forward_list.hpp  list.hpp  map.hpp  optional.hpp  pair.hpp  priority_queue.hpp  queue.hpp  set.hpp  shared_ptr.hpp  stack.hpp  string.hpp  tuple.hpp  unique_ptr.hpp  valarray.hpp  variant.hpp  vector.hpp  weak_ptr.hpp
include/SF/Core/: ArchiveBase.hpp  ArchiveTrait.hpp  ArchiveTraits.hpp  Config.hpp  Hash.hpp  InstantiableTrait.hpp  InstantiableTraits.hpp  Memory.hpp  PolymorphicArchive.hpp  Serialization.hpp  SerializatonBase.hpp  TypeCore.hpp  TypeRegistry.hpp
include/SF/Detail/: MacroUndef.hpp  Meta.hpp  MetaMacro.hpp  Preprocessor.hpp
include/SF/Dynamic/: AnyRegistry.hpp  ExternRegistry.hpp  Instantiable.hpp  InstantiableRegistry.hpp  InstantiableTraits.hpp
include/SF/Support/: any.hpp  array.hpp  atomic.hpp  bitset.hpp  complex.hpp  deque.hpp  forward_list.hpp  list.hpp  map.hpp  optional.hpp  pair.hpp  queue.hpp  set.hpp  shared_ptr.hpp  stack.hpp  string.hpp  tuple.hpp  unique_ptr.hpp  valarray.hpp  variant.hpp  vector.hpp  weak_ptr.hpp
include/SF/Utility/: Alias.hpp  BitPack.hpp  Expanding.hpp  Functional.hpp  Ref.hpp  Span.hpp  Utility.hpp
include/Serialization/: Access.hpp  Core.hpp  Hash.hpp  ReadArchive.hpp  Ref.hpp  Registry.hpp  Scope.hpp  Span.hpp  TypeRegistry.hpp  UndefMacro.hpp  WriteArchive.hpp
include/Serialization/Detail/: MacroScope.hpp  MacroUnscope.hpp  Meta.hpp  Tools.hpp
include/Serialization/Support/: array.hpp  string.hpp  vector.hpp
include/SerializationFixture/: Aggregate.hpp  ApplyFunctor.hpp  Binary.hpp  Common.hpp  Compress.hpp  Core.hpp  DataTrack.hpp  DataTrackBase.hpp  Hierarchy.hpp  HierarchyTrack.hpp  HierarchyTrackBase.hpp  IArchive.hpp  NativeSaveLoad.hpp  OArchive.hpp  Serializable.hpp  StreamWrapper.hpp  Strict.hpp  Union.hpp
include/Sifar/: Access.hpp  ApplyFunctor.hpp  ArchiveBase.hpp  ArchiveTrait.hpp  Common.hpp  Compress.hpp  Config.hpp  Core.hpp  DataTrack.hpp  DataTrackBase.hpp  FactoryTable.hpp  Hash.hpp  Memory.hpp  NativeSaveLoad.hpp  Polymorphic.hpp  PolymorphicArchive.hpp  PolymorphicTrait.hpp  ReadArchive.hpp  Ref.hpp  Registry.hpp  RegistryBase.hpp  Serializable.hpp  SerializatonBase.hpp  SoftSerialization.hpp  Span.hpp  Strict.hpp  TypeRegistry.hpp  UndefMacro.hpp  UnifiedData.hpp  Utility.hpp  WriteArchive.hpp
include/Siraf/: Access.hpp  ApplyFunctor.hpp  ArchiveBase.hpp  ArchiveTrait.hpp  Common.hpp  Compress.hpp  Config.hpp  Core.hpp  DataTrack.hpp  DataTrackBase.hpp  ExternSerialization.hpp  Hash.hpp  Hierarchy.hpp  HierarchyTrack.hpp  NativeSaveLoad.hpp  ReadArchive.hpp  Ref.hpp  Serializable.hpp  SerializatonBase.hpp  Span.hpp  StreamWrapper.hpp  Strict.hpp  TypeRegistry.hpp  UnifiedData.hpp  Utility.hpp  WriteArchive.hpp
package/: SerializationFixture.hpp
test/: CMakeLists.txt  EightserTestingBase.hpp  SFTestingBase.hpp  SirafTestingBase.hpp  TestAggregate.cpp  TestAlias.cpp  TestAny.cpp  TestArray.cpp  TestArray.h  TestAtomic.cpp  TestBitPack.cpp  TestBitset.cpp  TestBitset.h  TestComplex.cpp  TestDeque.cpp  TestDeque.h  TestDynamicArray.cpp  TestEnum.cpp  TestEnum.h  TestExample.cpp  TestForwardList.cpp  TestForwardList.h  TestLibrary.cpp  TestList.cpp  TestList.h  TestMap.cpp  TestMap.h  TestMemory.cpp  TestMemory.h  TestModule.cpp  TestModule.h  TestNumber.cpp  TestNumber.h  TestOptional.cpp  TestPair.cpp  TestPair.h  TestPolymorphic.cpp  TestPriorityQueue.cpp  TestQueue.cpp  TestQueue.h  (+34 more)
test/TestLibrary/: BaseObject.cpp  BaseObject.hpp  DerivedObject.cpp  DerivedObject.hpp  TestLibrary.cpp
test/demo/: TestExample.cpp  demo.cpp  example.cpp  inheritance.cpp  multi_array.cpp  polymorphic.cpp  ref_tracking.cpp  simple.cpp  tracking.cpp  tracking_shared_ptr.cpp  tracking_virtual.cpp  virtual_base.cpp
test/src/: SFTestingBase.cpp  SFTestingBase.hpp  TestAggregate.cpp  TestAny.cpp  TestBitPack.cpp  TestComplex.cpp  TestEnum.cpp  TestForwardList.cpp  TestLibrary.cpp  TestMemory.cpp  TestNumber.cpp  TestPair.cpp  TestQueue.cpp  TestString.cpp  TestTuple.cpp  TestUnion.cpp  TestUserType.cpp  TestVector.cpp  main.cpp
test/src/TestLibrary/: BaseObject.hpp
(+150 files in other folders)
